tests/FLang.Tests/Harness/errors/error_e2039_const_no_init.f
//! TEST: error_e2039_const_no_init
//! COMPILE-ERROR: E2039
pub fn main() i32 {
    const x: i32
    return 0
}
